Post notification with stepper

--- a/NCStepper/Base.lproj/Main.storyboard
+++ b/NCStepper/Base.lproj/Main.storyboard
@@ -1,14 +1,18 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="15G1108" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="m43-DP-6BH">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Stepper-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="StepperViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +20,110 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Stepper" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XK0-va-ehh">
+                                <rect key="frame" x="127" y="45" width="120" height="45"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="45" id="MGr-Ig-iYK"/>
+                                    <constraint firstAttribute="width" constant="120" id="g2m-K7-eZ7"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" maximumValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="5qD-lR-vtB">
+                                <rect key="frame" x="140" y="319" width="94" height="29"/>
+                                <connections>
+                                    <action selector="stepperAction:" destination="BYZ-38-t0r" eventType="valueChanged" id="9aY-Iw-Fl2"/>
+                                </connections>
+                            </stepper>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="5qD-lR-vtB" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="3LW-wz-nSr"/>
+                            <constraint firstItem="XK0-va-ehh" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="25" id="OUZ-cY-fw0"/>
+                            <constraint firstItem="XK0-va-ehh" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="ful-p2-rgS"/>
+                            <constraint firstItem="5qD-lR-vtB" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="wge-8s-MsH"/>
+                        </constraints>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Stepper" id="sgC-yb-cd6"/>
+                    <connections>
+                        <outlet property="stepper" destination="5qD-lR-vtB" id="ask-ng-rzo"/>
+                        <outlet property="titleLabel" destination="8bC-Xf-vdC" id="qXB-2J-bel"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-615.20000000000005" y="886.50674662668678"/>
+        </scene>
+        <!--Counter-->
+        <scene sceneID="E3f-0i-JBM">
+            <objects>
+                <viewController id="aQb-fD-peG" customClass="CounterViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="7e9-wZ-LHR"/>
+                        <viewControllerLayoutGuide type="bottom" id="lVn-Fd-Iyt"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="CTa-F4-DE3">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Counter" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UZM-O0-ScC">
+                                <rect key="frame" x="127" y="45" width="120" height="45"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="120" id="Fbc-8z-CZm"/>
+                                    <constraint firstAttribute="height" constant="45" id="TGc-jz-eep"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fYm-5E-mQ1">
+                                <rect key="frame" x="142.5" y="288" width="90" height="90"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="90" id="1LG-hk-2tC"/>
+                                    <constraint firstAttribute="height" constant="90" id="LTM-gY-3cx"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="45"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="fYm-5E-mQ1" firstAttribute="centerY" secondItem="CTa-F4-DE3" secondAttribute="centerY" id="9Ql-pB-aIV"/>
+                            <constraint firstItem="UZM-O0-ScC" firstAttribute="centerX" secondItem="CTa-F4-DE3" secondAttribute="centerX" id="R2V-yB-Euo"/>
+                            <constraint firstItem="UZM-O0-ScC" firstAttribute="top" secondItem="7e9-wZ-LHR" secondAttribute="bottom" constant="25" id="Uig-bM-meo"/>
+                            <constraint firstItem="fYm-5E-mQ1" firstAttribute="centerX" secondItem="CTa-F4-DE3" secondAttribute="centerX" id="zz0-Fa-uGk"/>
+                        </constraints>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Counter" id="x5G-QG-JWz"/>
+                    <connections>
+                        <outlet property="counterLabel" destination="fYm-5E-mQ1" id="Ac1-C7-SMe"/>
+                        <outlet property="titleLabel" destination="UZM-O0-ScC" id="umE-qy-szT"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="JPV-Vr-YfG" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="428" y="886.50674662668678"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="zCW-ry-LQI">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="m43-DP-6BH" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="n7O-aZ-Hux">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="XcL-tR-Fa3"/>
+                        <segue destination="aQb-fD-peG" kind="relationship" relationship="viewControllers" id="dcb-Vf-P8F"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="00T-Jg-IX5" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-98.400000000000006" y="122.78860569715144"/>
         </scene>
     </scenes>
 </document>
